# MancsMosoLightC

./: .clang-format  .gitignore  CMakeLists.txt  ReadMe.md
cmake/: gcc-msp430.cmake
src/: blinker.c  blinker.h  common.c  common.h  gpio.c  gpio.h  main.c  motorControl.c  motorControl.h  states.c  states.h  test.c  timer.c  timer.h
